--- a/package.json
+++ b/package.json
@@ -12,6 +12,11 @@
     "@kinde-oss/kinde-auth-nextjs": "^2.3.7",
     "@radix-ui/react-slot": "^1.1.0",
     "@tailwindcss/typography": "^0.5.14",
+    "@tanstack/react-query": "^5.52.2",
+    "@trpc/client": "^11.0.0-rc.490",
+    "@trpc/next": "^11.0.0-rc.490",
+    "@trpc/react-query": "^11.0.0-rc.490",
+    "@trpc/server": "^11.0.0-rc.490",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "lucide-react": "^0.436.0",
@@ -19,7 +24,8 @@
     "react": "^18",
     "react-dom": "^18",
     "tailwind-merge": "^2.5.2",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/node": "^20",
