--- a/package.json
+++ b/package.json
@@ -9,17 +9,21 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.9.0",
     "@kinde-oss/kinde-auth-nextjs": "^2.3.7",
     "@prisma/client": "^5.19.0",
     "@radix-ui/react-dialog": "^1.1.1",
+    "@radix-ui/react-dropdown-menu": "^2.1.1",
     "@radix-ui/react-progress": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-toast": "^1.2.1",
     "@tailwindcss/typography": "^0.5.14",
     "@tanstack/react-query": "^5.52.2",
     "@trpc/client": "^11.0.0-rc.490",
     "@trpc/next": "^11.0.0-rc.490",
     "@trpc/react-query": "^11.0.0-rc.490",
     "@trpc/server": "^11.0.0-rc.490",
+    "@uploadthing/react": "^6.7.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
@@ -28,10 +32,14 @@
     "react": "^18",
     "react-dom": "^18",
     "react-dropzone": "^14.2.3",
+    "react-hook-form": "^7.53.0",
     "react-loading-skeleton": "^3.4.0",
     "react-pdf": "^9.1.0",
+    "react-resize-detector": "^11.0.1",
+    "simplebar-react": "^3.2.6",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
+    "uploadthing": "^6.13.2",
     "zod": "^3.23.8"
   },
   "devDependencies": {
