--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-loading-skeleton": "^3.4.0",
     "react-pdf": "^9.1.0",
     "react-resize-detector": "^11.0.1",
+    "react-textarea-autosize": "^8.5.3",
     "simplebar-react": "^3.2.6",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
