[master] : ChatGPT working

--- a/package.json
+++ b/package.json
@@ -27,12 +27,14 @@
     "@trpc/react-query": "^11.0.0-rc.490",
     "@trpc/server": "^11.0.0-rc.490",
     "@uploadthing/react": "^6.7.2",
+    "ai": "^3.3.26",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
     "langchain": "^0.2.17",
     "lucide-react": "^0.436.0",
     "next": "14.2.7",
+    "openai": "^4.57.1",
     "pdf-parse": "^1.1.1",
     "react": "^18",
     "react-dom": "^18",
