[master] : Chat functionality implemented

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@kinde-oss/kinde-auth-nextjs": "^2.3.7",
     "@langchain/openai": "^0.2.8",
     "@langchain/pinecone": "^0.0.9",
+    "@mantine/hooks": "^7.12.2",
     "@pinecone-database/pinecone": "^3.0.2",
     "@prisma/client": "^5.19.0",
     "@radix-ui/react-dialog": "^1.1.1",
@@ -41,6 +42,7 @@
     "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.53.0",
     "react-loading-skeleton": "^3.4.0",
+    "react-markdown": "^9.0.1",
     "react-pdf": "^9.1.0",
     "react-resize-detector": "^11.0.1",
     "react-textarea-autosize": "^8.5.3",
